Fix loading anim pushing scrollbars

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,7 +24,8 @@ footer {
 #loading {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 70%;
+    margin-left: -8px; /* counter default body margin */
 }
 
 .shadowbox {
